[incubator-kie-issues#1973] Refactoring DMN efesto compiler services and related tests